--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,15 +11,27 @@ body {
     background-color: rgba(97, 95, 94, 0.3);
 }
 
+
+/* 
+##########################
+#####    SIDE NAV    #####
+##########################
+*/
+
+
+
 .sidenav {
-    height: 100%;
-    flex: 20%;
-    width: 300px;
+    /*height: 100%;*/
+    /*flex: 20%;*/
+    width: 250px;
+    overflow: hidden;
     flex-flow: column wrap;
     position: fixed;
     z-index: 10;
     /*top: 0;*/
-    left: 0;
+    margin-left: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     background-color: rgba(97, 95, 94, 0.3);
     overflow-y: hidden;
     /*padding-top: 20px;*/
@@ -31,13 +43,14 @@ body {
     text-decoration: none;
 }
 
-.sidenav h2 {
+.sidenav h1 {
     font-size: 30px;
     text-align: center;
     letter-spacing: 0.05em;
     word-spacing: 0.1em;
     font-weight: 700;
-    color: rgba(19, 37, 54, 1); 
+    /*color: rgba(19, 37, 54, 1); */
+    color: black;
     margin: 0;
     padding-top: 20px;
     padding-bottom: 10px;
@@ -60,9 +73,9 @@ body {
     word-spacing: 0.1em;
     color: white;
     border-top: 1px solid rgba(97, 95, 94, 0.6);
-    background-color: rgba(97, 95, 94, 0.3);
-    /*max-width: 150px;*/
-    width: 100%;
+    /*background-color: rgba(97, 95, 94, 0.3);*/
+    max-width: 250px;
+    /*width: 100%;*/
 }
 
 .sidenav li:last-child {
@@ -70,16 +83,18 @@ body {
 }
 
 .sidenav li:hover {
-    background-color: rgba(19, 37, 54, 1);
+    color: rgba(19, 37, 54, 1);
+    background-color: white;
 }
 
-.sidenav h3 {
+.sidenav h2 {
     font-size: 20px;
     text-align: center;
     letter-spacing: 0.05em;
     word-spacing: 0.1em;
     font-weight: 700;
-    color: rgba(19, 37, 54, 1); 
+    /*color: rgba(19, 37, 54, 1); */
+    color: black;
 }
 
 .nav-filters {
@@ -138,7 +153,7 @@ body {
 main {
     /*flex: 85%;*/
     width: 100%;
-    margin-left: 300px;
+    margin-left: 270px;
 }
 
 
@@ -146,10 +161,11 @@ main {
     display: inline-block;
     position: fixed;
     z-index: 10;
-    max-width: 1086px;
+    max-width: 1040px;
     width: 100%;
     text-align: center;
-    margin: 0;
+    margin-top: 20px;
+    margin-left: 10px;
     padding: 15px 0;
     background-color: rgba(19, 37, 54, 0.75);
     color: white;
@@ -162,21 +178,33 @@ main {
     font-weight: 700;
 }
 
+
+
+/* 
+##########################
+##### PROJECT VIEWER #####
+##########################
+*/
+
+
+
 .pviewer {
-    margin-top: 84px;
+    margin-top: 104px;
     flex-flow: column wrap;
+    /*visibility: hidden;*/
 }
 .pv-generalinfo {
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 20px;
+    margin-right: 30px;
     padding: 5px 10px;
     background-color: white;
-    max-width: 1046px;
+    max-width: 1000px;
     flex-flow: column wrap;
 }
 
-#pv-title h1{
-    margin: 0;
+.secdescription-h1{
+    margin-top: 5px;
+    margin-bottom: 2px;
     color: black;
     font-weight: 400;
     font-size: 24px;
@@ -184,6 +212,7 @@ main {
 
 #pv-title h2 {
     margin: 0;
+    margin-bottom: 15px;
     color: black;
     font-weight: 200;
     font-size: 20px;
@@ -206,7 +235,43 @@ main {
     margin: 0;
 }
 
-/*#pv-info table {
-    display: inline-flex;
+#pv-info table {
+    /*border: 1px solid rgba(74, 75, 76,1);*/
+    margin: 10px;
+    border-collapse: collapse;
 }
+
+#pv-info table thead {
+    border-bottom: 3px solid rgba(74, 75, 76,1);
+    line-height: 2em;
+}
+
+#pv-info table thead tr th{
+    width: 100%;
+    text-align: center;
+}
+
+#pv-intro {
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 30px;
+    padding: 5px 10px;
+    background-color: white;
+    max-width: 1000px;
+    flex-flow: column wrap;
+}
+
+/*
+*** TABLES ***
 */
+
+.table-imp {
+    font-size: 14px;
+    font-weight: 700;
+}
+
+tr {
+    line-height: 1.5em;
+    vertical-align: baseline;
+}
+
