--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,7 +8,8 @@ body {
     min-width: 1200 px;
     display: flex;
     margin: 0 auto;
-    background-color: rgba(97, 95, 94, 0.3);
+    /*background-color: rgba(97, 95, 94, 0.3);*/
+    background-color: white;
 }
 
 
@@ -21,7 +22,7 @@ body {
 
 
 .sidenav {
-    /*height: 100%;*/
+    height: 95%;
     /*flex: 20%;*/
     width: 250px;
     overflow: hidden;
@@ -29,14 +30,19 @@ body {
     position: fixed;
     z-index: 10;
     /*top: 0;*/
-    margin-left: 10px;
+    margin-left: 20px;
     margin-top: 20px;
     margin-bottom: 20px;
-    background-color: rgba(97, 95, 94, 0.3);
+    /*background-color: rgba(97, 95, 94, 0.3);*/
+    /*background-color: rgba(40, 50, 15, 0.3);*/
+    background-color: rgba(78, 110, 97, 0.8);
     overflow-y: hidden;
     /*padding-top: 20px;*/
     /*padding-left: 20px;*/
     justify-content: flex-start;
+    border-radius: 25px;
+    /*box-shadow: 5px 5px 5px 0 rgb(49, 50, 52);*/
+    box-shadow: 5px 5px 5px 0 rgb(74, 75, 76);
 }
 
 .sidenav a {
@@ -54,6 +60,8 @@ body {
     margin: 0;
     padding-top: 20px;
     padding-bottom: 10px;
+    border-bottom: 1px solid;
+    /*border-radius: 15px;*/
 }
 
 .sidenav ul {
@@ -72,14 +80,16 @@ body {
     letter-spacing: 0.05em;
     word-spacing: 0.1em;
     color: white;
-    border-top: 1px solid rgba(97, 95, 94, 0.6);
+    /*border-top: 1px solid rgba(97, 95, 94, 0.6);
     /*background-color: rgba(97, 95, 94, 0.3);*/
     max-width: 250px;
     /*width: 100%;*/
+    border-radius: 15px;
+    transition: 0.3s
 }
 
 .sidenav li:last-child {
-    border-bottom: 1px solid rgba(97, 95, 94, 0.6);
+    /*border-bottom: 1px solid rgba(97, 95, 94, 0.6);*/
 }
 
 .sidenav li:hover {
@@ -93,8 +103,10 @@ body {
     letter-spacing: 0.05em;
     word-spacing: 0.1em;
     font-weight: 700;
+    line-height: 1.5em;
     /*color: rgba(19, 37, 54, 1); */
     color: black;
+    border-bottom: 1px solid;
 }
 
 .nav-filters {
@@ -123,6 +135,7 @@ body {
 
 .nav-filters select:hover{
     background-color: white;
+    transition: 0.3s;
 }
 
 .nav-filters input {
@@ -135,9 +148,14 @@ body {
     border: 1px solid rgba(97, 95, 94, 0);
 }
 
+.nav-filters input:last-child {
+    margin-bottom: 20px;
+}
+
 .nav-filters input:hover{
     background-color: white;
     border: none;
+    transition: 0.3s;
 }
 
 /*
@@ -153,7 +171,7 @@ body {
 main {
     /*flex: 85%;*/
     width: 100%;
-    margin-left: 270px;
+    margin-left: 280px;
 }
 
 
@@ -167,8 +185,12 @@ main {
     margin-top: 20px;
     margin-left: 10px;
     padding: 15px 0;
+    /*background-color: rgba(19, 37, 54, 0.75);*/
     background-color: rgba(19, 37, 54, 0.75);
     color: white;
+    border-radius: 25px;
+    /*box-shadow: 5px 5px 5px 0 rgb(49, 50, 52);*/
+    box-shadow: 5px 5px 5px 0 rgb(74, 75, 76);
 }
 
 .header-bar span {
@@ -197,9 +219,12 @@ main {
     margin-left: 20px;
     margin-right: 30px;
     padding: 5px 10px;
-    background-color: white;
+    /*background-color: white;*/
+    background-color: rgba(97, 95, 94, 0.1);
     max-width: 1000px;
     flex-flow: column wrap;
+    border-radius: 15px;
+    /*display: none;*/
 }
 
 .secdescription-h1{
@@ -256,22 +281,64 @@ main {
     margin-left: 20px;
     margin-right: 30px;
     padding: 5px 10px;
-    background-color: white;
+    /*background-color: white;*/
+    background-color: rgba(97, 95, 94, 0.1);
     max-width: 1000px;
     flex-flow: column wrap;
+    border-radius: 15px;
 }
 
 /*
 *** TABLES ***
 */
 
+/*
+table {
+    background-color: rgba(97, 95, 94, 0.1);
+}*/
+
+td {
+    padding: 5px;
+}
+
 .table-imp {
     font-size: 14px;
     font-weight: 700;
-}
-
-tr {
     line-height: 1.5em;
-    vertical-align: baseline;
 }
 
+.table-nimp {
+    font-size: 14px;
+    font-weight: 200;
+    line-height: 1.5em;
+    /*ont-style: italic;*/
+    color: rgb(0, 0, 0);
+}
+
+#projectids {
+    min-width: 250px;  
+}
+
+#projectids .table-right {
+    text-align: right;
+}
+
+#projectpartners {
+    min-width: 300px;
+}
+
+#projectpartners td {
+    font-size: 14px;
+}
+
+#projectpartners .table-right {
+    text-align: center;
+}
+
+#projectfinacials {
+    min-width: 450 px;
+}
+
+#projectfinancials .table-right {
+    text-align: right;
+}
