--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,10 +8,8 @@ body {
     min-width: 1200 px;
     display: flex;
     margin: 0 auto;
-    /*background-color: rgba(97, 95, 94, 0.3);*/
     background-color: white;
 }
-
 
 /* 
 ##########################
@@ -19,30 +17,25 @@ body {
 ##########################
 */
 
-
-
 .sidenav {
-    height: 95%;
-    /*flex: 20%;*/
+    /*height: 95%;*/
+    min-height: 75%;
     width: 250px;
     overflow: hidden;
     flex-flow: column wrap;
     position: fixed;
     z-index: 10;
-    /*top: 0;*/
     margin-left: 20px;
-    margin-top: 20px;
+    /*margin-top: 20px;*/
+    margin-top: 94px;
     margin-bottom: 20px;
-    /*background-color: rgba(97, 95, 94, 0.3);*/
-    /*background-color: rgba(40, 50, 15, 0.3);*/
-    background-color: rgba(78, 110, 97, 0.8);
+    /*background-color: rgba(78, 110, 97, 0.8);*/
+    background-color: white;
     overflow-y: hidden;
-    /*padding-top: 20px;*/
-    /*padding-left: 20px;*/
     justify-content: flex-start;
     border-radius: 25px;
-    /*box-shadow: 5px 5px 5px 0 rgb(49, 50, 52);*/
-    box-shadow: 5px 5px 5px 0 rgb(74, 75, 76);
+    border: 5px solid rgba(78, 110, 97, 1);
+    /*box-shadow: 5px 5px 5px 0 rgb(74, 75, 76);*/
 }
 
 .sidenav a {
@@ -55,13 +48,11 @@ body {
     letter-spacing: 0.05em;
     word-spacing: 0.1em;
     font-weight: 700;
-    /*color: rgba(19, 37, 54, 1); */
     color: black;
     margin: 0;
     padding-top: 20px;
     padding-bottom: 10px;
-    border-bottom: 1px solid;
-    /*border-radius: 15px;*/
+    /*border-bottom: 1px solid;*/
 }
 
 .sidenav ul {
@@ -69,7 +60,6 @@ body {
 }
 
 .sidenav li {
-    /*align-items: center;*/
     text-align: center;
     list-style: none;
     padding: 15px;
@@ -79,34 +69,26 @@ body {
     font-weight: 700;
     letter-spacing: 0.05em;
     word-spacing: 0.1em;
-    color: white;
-    /*border-top: 1px solid rgba(97, 95, 94, 0.6);
-    /*background-color: rgba(97, 95, 94, 0.3);*/
+    color: rgba(78, 110, 97, 1);
     max-width: 250px;
-    /*width: 100%;*/
     border-radius: 15px;
-    transition: 0.3s
-}
-
-.sidenav li:last-child {
-    /*border-bottom: 1px solid rgba(97, 95, 94, 0.6);*/
 }
 
 .sidenav li:hover {
-    color: rgba(19, 37, 54, 1);
-    background-color: white;
+    color: white;
+    background-color: rgba(78, 110, 97, 0.8);
+    transition: 0.75s;
 }
 
 .sidenav h2 {
     font-size: 20px;
     text-align: center;
-    letter-spacing: 0.05em;
+    letter-spacing: 0.1em;
     word-spacing: 0.1em;
-    font-weight: 700;
-    line-height: 1.5em;
-    /*color: rgba(19, 37, 54, 1); */
+    font-weight: 600;
+    line-height: 3em;
     color: black;
-    border-bottom: 1px solid;
+    /*border-bottom: 1px solid;*/
 }
 
 .nav-filters {
@@ -120,22 +102,27 @@ body {
     color: rgba(62, 63, 64, 1);
     letter-spacing: 0.05em;
     word-spacing: 0.1em;
+    line-height: 2em;
     font-weight: 700;
     padding: 5px 0;
 }
 
 .nav-filters select {
-    letter-spacing: 0.05em;
+    letter-spacing: 0.1em;
     word-spacing: 0.1em;
-    font-weight: 700;
-    padding: 10px 0;
+    font-weight: 900;
+    font-size: 16px;
+    padding: 10px 10px;
     background-color: rgba(97, 95, 94, 0);
     color: rgba(19, 37, 54, 1);
+    border: 1px solid rgba(97, 95, 94, 0);
+    border-radius: 15px;
+    overflow: auto ;
 }
 
 .nav-filters select:hover{
-    background-color: white;
-    transition: 0.3s;
+    background-color: rgba(78, 110, 97, 0.8);
+    transition: 0.75s;
 }
 
 .nav-filters input {
@@ -158,22 +145,12 @@ body {
     transition: 0.3s;
 }
 
-/*
-.sidenav label {
-    text-align: center;
-    font-size: 14px;
-    letter-spacing: 0.05em;
-    word-spacing: 0.1em;
-    font-weight: 700;
-
-}
-*/
 main {
-    /*flex: 85%;*/
     width: 100%;
     margin-left: 280px;
 }
 
+/* HEADER BAR */
 
 .header-bar {
     display: inline-block;
@@ -185,12 +162,12 @@ main {
     margin-top: 20px;
     margin-left: 10px;
     padding: 15px 0;
-    /*background-color: rgba(19, 37, 54, 0.75);*/
-    background-color: rgba(19, 37, 54, 0.75);
-    color: white;
+    background-color: rgba(19, 37, 54, 0.25);
+    /*background-color: white;*/
+    color: black;
     border-radius: 25px;
-    /*box-shadow: 5px 5px 5px 0 rgb(49, 50, 52);*/
-    box-shadow: 5px 5px 5px 0 rgb(74, 75, 76);
+    border: 5px solid rgba(19, 37, 54, 1);
+    /*box-shadow: 5px 5px 5px 0 rgb(74, 75, 76);*/
 }
 
 .header-bar span {
@@ -201,22 +178,15 @@ main {
 }
 
 
-
 /* 
 ##########################
-##### PROJECT VIEWER #####
+#####    Infocard    #####
 ##########################
 */
 
-
-
-.pviewer {
-    margin-top: 104px;
-    flex-flow: column wrap;
-    /*visibility: hidden;*/
-}
-.pv-generalinfo {
-    margin-left: 20px;
+.infocard {
+    margin-top: 20px;
+    margin-left: 25px;
     margin-right: 30px;
     padding: 5px 10px;
     /*background-color: white;*/
@@ -224,10 +194,35 @@ main {
     max-width: 1000px;
     flex-flow: column wrap;
     border-radius: 15px;
+    border: 1px solid rgba(97, 95, 94, 0.25);
     /*display: none;*/
 }
 
-.secdescription-h1{
+.infocard-title {
+    margin-top: 5px;
+    margin-bottom: 2px;
+    color: black;
+    font-weight: 400;
+    font-size: 24px;
+}
+
+/* 
+##########################
+##### PROJECT VIEWER #####
+##########################
+*/
+
+section {
+    margin-top: 104px;
+    flex-flow: column wrap;
+}
+
+.pviewer {
+    display: none; /*!!!HERE IT IS!!!!*/
+}
+
+
+#pv-title h1 {
     margin-top: 5px;
     margin-bottom: 2px;
     color: black;
@@ -243,59 +238,9 @@ main {
     font-size: 20px;
 }
 
-#pv-info {
-    display: flex;
-    justify-content: space-between;
-}
-
-#pv-info h1 {
-    display: inline-flex;
-    width: 200px;
-    margin: 0;
-}
-
-#pv-info h2 {
-    display: inline-flex;
-    width: 200px;
-    margin: 0;
-}
-
-#pv-info table {
-    /*border: 1px solid rgba(74, 75, 76,1);*/
-    margin: 10px;
-    border-collapse: collapse;
-}
-
-#pv-info table thead {
-    border-bottom: 3px solid rgba(74, 75, 76,1);
-    line-height: 2em;
-}
-
-#pv-info table thead tr th{
-    width: 100%;
-    text-align: center;
-}
-
-#pv-intro {
-    margin-top: 20px;
-    margin-left: 20px;
-    margin-right: 30px;
-    padding: 5px 10px;
-    /*background-color: white;*/
-    background-color: rgba(97, 95, 94, 0.1);
-    max-width: 1000px;
-    flex-flow: column wrap;
-    border-radius: 15px;
-}
-
 /*
 *** TABLES ***
 */
-
-/*
-table {
-    background-color: rgba(97, 95, 94, 0.1);
-}*/
 
 td {
     padding: 5px;
@@ -316,7 +261,7 @@ td {
 }
 
 #projectids {
-    min-width: 250px;  
+    min-width: 250px;
 }
 
 #projectids .table-right {
@@ -341,4 +286,55 @@ td {
 
 #projectfinancials .table-right {
     text-align: right;
+}
+
+#pv-infotables {
+    display: flex;
+    justify-content: space-between;
+}
+
+#pv-infotables h1 {
+    display: inline-flex;
+    width: 200px;
+    margin: 0;
+}
+
+#pv-infotables h2 {
+    display: inline-flex;
+    width: 200px;
+    margin: 0;
+}
+
+#pv-infotables table {
+    margin: 10px;
+    border-collapse: collapse;
+}
+
+#pv-infotables table thead {
+    border-bottom: 3px solid rgba(74, 75, 76,1);
+    line-height: 2em;
+}
+
+#pv-infotables table thead tr th{
+    width: 100%;
+    text-align: center;
+}
+
+/* 
+##########################
+##### TEAM CALENDAR  #####
+##########################
+*/
+
+.teamcalendar {
+    display: none; /*!!!HERE IT IS!!!!*/
+}
+
+.two-column-spacearound {
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+}
+.two-column-spacearound h1{
+    font-size: 18px;
 }
