--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -91,60 +91,6 @@ body {
     /*border-bottom: 1px solid;*/
 }
 
-.nav-filters {
-    display: flex;
-    flex-flow: column wrap;
-    text-align: center;
-}
-
-.nav-filters label {
-    font-size: 14px;
-    color: rgba(62, 63, 64, 1);
-    letter-spacing: 0.05em;
-    word-spacing: 0.1em;
-    line-height: 2em;
-    font-weight: 700;
-    padding: 5px 0;
-}
-
-.nav-filters select {
-    letter-spacing: 0.1em;
-    word-spacing: 0.1em;
-    font-weight: 900;
-    font-size: 16px;
-    padding: 10px 10px;
-    background-color: rgba(97, 95, 94, 0);
-    color: rgba(19, 37, 54, 1);
-    border: 1px solid rgba(97, 95, 94, 0);
-    border-radius: 15px;
-    overflow: auto ;
-}
-
-.nav-filters select:hover{
-    background-color: rgba(78, 110, 97, 0.8);
-    transition: 0.75s;
-}
-
-.nav-filters input {
-    letter-spacing: 0.05em;
-    word-spacing: 0.1em;
-    font-weight: 700;
-    padding: 10px 0;
-    background-color: rgba(97, 95, 94, 0);
-    color: rgba(19, 37, 54, 1);
-    border: 1px solid rgba(97, 95, 94, 0);
-}
-
-.nav-filters input:last-child {
-    margin-bottom: 20px;
-}
-
-.nav-filters input:hover{
-    background-color: white;
-    border: none;
-    transition: 0.3s;
-}
-
 main {
     width: 100%;
     margin-left: 280px;
@@ -162,11 +108,12 @@ main {
     margin-top: 20px;
     margin-left: 10px;
     padding: 15px 0;
-    background-color: rgba(19, 37, 54, 0.25);
-    /*background-color: white;*/
+    /*background-color: rgba(19, 37, 54, 0.25);*/
+    background-color: white;
     color: black;
     border-radius: 25px;
     border: 5px solid rgba(19, 37, 54, 1);
+    /*border: 5px solid rgba(19, 37, 54, 1);*/
     /*box-shadow: 5px 5px 5px 0 rgb(74, 75, 76);*/
 }
 
@@ -208,6 +155,132 @@ main {
 
 /* 
 ##########################
+#####   Filtercard   #####
+##########################
+*/
+
+.filtercard{
+    position: fixed;
+    z-index: 9;
+    margin-top: 20px;
+    margin-left: 25px;
+    margin-right: 30px;
+    padding: 5px 10px;
+    /*background-color: white;*/
+    background-color: rgba(97, 95, 94, 0.1);
+    
+    border-radius: 15px;
+    border: 1px solid rgba(97, 95, 94, 0.25);
+    
+}
+
+.filtercard-filters {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+}
+
+.filtercard-button {
+    display: flex;
+    justify-content: center;
+    margin-top: 15px;
+    margin-bottom: 10px;
+    min-width: 100px;
+}
+
+.filtercard-button button {
+    font-size: 16px;
+    font-weight: 700;
+    min-width: 100px;
+    min-height: 25px;
+    letter-spacing: 0.1em;
+    line-height: 2em;
+    background-color: white;
+    border: 2px solid black;
+    border-radius: 15px;
+}
+
+.filtercard-button button:hover {
+    background-color: rgba(94,94,94,0.5);
+    transition: 0.75s;
+    border: 2px solid rgba(94,94,94,0.5);
+}
+
+#pviewer-filtercard {
+    background-color: rgba(255,255,255,0.75);
+    /*border: 3px solid rgba(97, 95, 94, 0.25);*/
+    border: 3px solid rgba(19, 37, 54, 0.75);
+    min-width: 1000px;
+    max-width: 1000px;
+    transition: 1s;
+}
+
+#pviewer-filtercard:hover {
+    transition: 1s;
+    background-color: white;
+}
+
+.nav-filters {
+    display: flex;
+    flex-flow: column wrap;
+    text-align: center;
+    min-width: 200px;
+    max-width: 200px;
+    overflow: hidden;
+}
+
+.nav-filters label {
+    font-size: 14px;
+    color: rgba(62, 63, 64, 1);
+    letter-spacing: 0.05em;
+    word-spacing: 0.1em;
+    line-height: 2em;
+    font-weight: 700;
+    padding: 5px 0;
+}
+
+.nav-filters select {
+    letter-spacing: 0.1em;
+    word-spacing: 0.1em;
+    font-weight: 900;
+    font-size: 16px;
+    padding: 10px 10px;
+    background-color: rgba(97, 95, 94, 0);
+    color: rgba(19, 37, 54, 1);
+    border: 1px solid rgba(97, 95, 94, 0);
+    border-radius: 15px;
+    overflow: auto ;
+}
+
+.nav-filters select:hover{
+    /*background-color: rgba(78, 110, 97, 0.8);*/
+    background-color: rgba(94,94,94,0.65);
+    transition: 0.75s;
+}
+
+.nav-filters input {
+    letter-spacing: 0.05em;
+    word-spacing: 0.1em;
+    font-weight: 700;
+    padding: 10px 0;
+    background-color: rgba(97, 95, 94, 0);
+    color: rgba(19, 37, 54, 1);
+    border: 1px solid rgba(97, 95, 94, 0);
+}
+
+.nav-filters input:last-child {
+    margin-bottom: 20px;
+}
+
+.nav-filters input:hover{
+    background-color: white;
+    border: none;
+    transition: 0.3s;
+}
+
+
+/* 
+##########################
 ##### PROJECT VIEWER #####
 ##########################
 */
@@ -219,6 +292,67 @@ section {
 
 .pviewer {
     display: none; /*!!!HERE IT IS!!!!*/
+}
+
+.card-img-sep {
+    display: flex;
+    flex-flow: row wrap;
+}
+
+#pv-1-generalinfo {
+    max-width: 650px;
+    margin-right: 15px;
+    margin-top: 135px;
+}
+
+.pv-image {
+    max-width: 388px;
+    min-width: 388px;
+    min-height: 268px;
+    max-height: 268px;
+    background-color: rgba(97, 95, 94, 0.1);    
+    border-radius: 15px;
+    border: 1px solid rgba(97, 95, 94, 0.25);
+    margin-top: 135px;
+    margin-right: 30px;
+    position: relative; /* Hmm hmmm*/
+}
+
+#pv_projectimage {
+    margin: 0;
+    padding: 0;
+    border-radius: 15px;
+}
+
+#pv-image-fig {
+    margin: 0;
+    padding: 0;
+}
+
+#pv-projectimage {
+    z-index: 1;
+}
+
+#pv-image-fig figcaption {
+    position: absolute;
+    min-width: 388px;
+    max-width: 388px;
+    min-height: 268px;
+    max-height: 268px;
+    line-height: 7em;
+    text-align: center;
+    background-color: rgba(255,255,255,0);
+    color: rgba(255,255,255,0);
+    top: 0;
+    z-index: 2;
+    transition: 0.75s;
+    border-radius: 15px;
+}
+
+#pv-image-fig figcaption:hover {
+    background-color: rgba(255,255,255,0.75);
+    color: black;
+    transition: 0.75s;
 }
 
 
@@ -236,6 +370,14 @@ section {
     color: black;
     font-weight: 200;
     font-size: 20px;
+}
+
+#pv-intro {
+    font-size: 16px;
+    letter-spacing: 0.05em;
+    word-spacing: 0.01;
+    line-height: 1.5em;
+    font-weight: 200;
 }
 
 /*
@@ -290,7 +432,7 @@ td {
 
 #pv-infotables {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 #pv-infotables h1 {
