--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,6 +11,16 @@ body {
     background-color: white;
 }
 
+main {
+    width: 100%;
+    margin-left: 280px;
+}
+
+section {
+    margin-top: 104px;
+    flex-flow: column wrap;
+}
+
 /* 
 ##########################
 #####    SIDE NAV    #####
@@ -36,10 +46,6 @@ body {
     border-radius: 25px;
     border: 5px solid rgba(78, 110, 97, 1);
     /*box-shadow: 5px 5px 5px 0 rgb(74, 75, 76);*/
-}
-
-.sidenav a {
-    text-decoration: none;
 }
 
 .sidenav h1 {
@@ -80,25 +86,13 @@ body {
     transition: 0.75s;
 }
 
-.sidenav h2 {
-    font-size: 20px;
-    text-align: center;
-    letter-spacing: 0.1em;
-    word-spacing: 0.1em;
-    font-weight: 600;
-    line-height: 3em;
-    color: black;
-    /*border-bottom: 1px solid;*/
-}
+/* 
+##########################
+#####   HEADER BAR   #####
+##########################
+*/
 
-main {
-    width: 100%;
-    margin-left: 280px;
-}
-
-/* HEADER BAR */
-
-.header-bar {
+header {
     display: inline-block;
     position: fixed;
     z-index: 10;
@@ -117,7 +111,7 @@ main {
     /*box-shadow: 5px 5px 5px 0 rgb(74, 75, 76);*/
 }
 
-.header-bar span {
+header span {
     font-size: 30px;
     letter-spacing: 0.1em;
     word-spacing: 0.1em;
@@ -131,7 +125,7 @@ main {
 ##########################
 */
 
-.infocard {
+.div-infocard {
     margin-top: 20px;
     margin-left: 25px;
     margin-right: 30px;
@@ -145,7 +139,7 @@ main {
     /*display: none;*/
 }
 
-.infocard-title {
+.div-infocard_title {
     margin-top: 5px;
     margin-bottom: 2px;
     color: black;
@@ -155,72 +149,37 @@ main {
 
 /* 
 ##########################
-#####   Filtercard   #####
+####  SUB-HEADERBAR  #####
 ##########################
 */
 
-.filtercard{
+.div-subheader{
     position: fixed;
     z-index: 9;
     margin-top: 20px;
     margin-left: 25px;
     margin-right: 30px;
-    padding: 5px 10px;
-    /*background-color: white;*/
-    background-color: rgba(97, 95, 94, 0.1);
-    
+    padding: 5px 10px;    
     border-radius: 15px;
-    border: 1px solid rgba(97, 95, 94, 0.25);
-    
-}
-
-.filtercard-filters {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
-}
-
-.filtercard-button {
-    display: flex;
-    justify-content: center;
-    margin-top: 15px;
-    margin-bottom: 10px;
-    min-width: 100px;
-}
-
-.filtercard-button button {
-    font-size: 16px;
-    font-weight: 700;
-    min-width: 100px;
-    min-height: 25px;
-    letter-spacing: 0.1em;
-    line-height: 2em;
-    background-color: white;
-    border: 2px solid black;
-    border-radius: 15px;
-}
-
-.filtercard-button button:hover {
-    background-color: rgba(94,94,94,0.5);
-    transition: 0.75s;
-    border: 2px solid rgba(94,94,94,0.5);
-}
-
-#pviewer-filtercard {
     background-color: rgba(255,255,255,0.75);
-    /*border: 3px solid rgba(97, 95, 94, 0.25);*/
     border: 3px solid rgba(19, 37, 54, 0.75);
     min-width: 1000px;
     max-width: 1000px;
     transition: 1s;
 }
 
-#pviewer-filtercard:hover {
-    transition: 1s;
+.div-subheader:hover{
     background-color: white;
+    transition: 1s;
 }
 
-.nav-filters {
+.div-filtercard-filters {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+}
+
+.div-selectfilter {
     display: flex;
     flex-flow: column wrap;
     text-align: center;
@@ -229,7 +188,7 @@ main {
     overflow: hidden;
 }
 
-.nav-filters label {
+.div-selectfilter label {
     font-size: 14px;
     color: rgba(62, 63, 64, 1);
     letter-spacing: 0.05em;
@@ -239,7 +198,7 @@ main {
     padding: 5px 0;
 }
 
-.nav-filters select {
+.div-selectfilter select {
     letter-spacing: 0.1em;
     word-spacing: 0.1em;
     font-weight: 900;
@@ -252,30 +211,20 @@ main {
     overflow: auto ;
 }
 
-.nav-filters select:hover{
+.div-selectfilter select:hover{
     /*background-color: rgba(78, 110, 97, 0.8);*/
     background-color: rgba(94,94,94,0.65);
     transition: 0.75s;
 }
 
-.nav-filters input {
-    letter-spacing: 0.05em;
-    word-spacing: 0.1em;
-    font-weight: 700;
-    padding: 10px 0;
-    background-color: rgba(97, 95, 94, 0);
-    color: rgba(19, 37, 54, 1);
-    border: 1px solid rgba(97, 95, 94, 0);
-}
+/* 
+##########################
+#####  WELCOME PAGE  #####
+##########################
+*/
 
-.nav-filters input:last-child {
-    margin-bottom: 20px;
-}
-
-.nav-filters input:hover{
-    background-color: white;
-    border: none;
-    transition: 0.3s;
+#sec_welcomepage {
+    display: block;
 }
 
 
@@ -285,27 +234,39 @@ main {
 ##########################
 */
 
-section {
-    margin-top: 104px;
-    flex-flow: column wrap;
-}
 
-.pviewer {
+#sec_pviewer {
     display: none; /*!!!HERE IT IS!!!!*/
 }
 
-.card-img-sep {
+.div-div_img_sep{
     display: flex;
     flex-flow: row wrap;
 }
 
-#pv-1-generalinfo {
+#pv-infocard-general{
     max-width: 650px;
     margin-right: 15px;
     margin-top: 135px;
 }
 
-.pv-image {
+#pv-infocard-general-title h1 {
+    margin-top: 5px;
+    margin-bottom: 2px;
+    color: black;
+    font-weight: 400;
+    font-size: 24px;
+}
+
+#pv-infocard-general-title h2 {
+    margin: 0;
+    margin-bottom: 15px;
+    color: black;
+    font-weight: 200;
+    font-size: 20px;
+}
+
+.div-image_small {
     max-width: 388px;
     min-width: 388px;
     min-height: 268px;
@@ -315,25 +276,22 @@ section {
     border: 1px solid rgba(97, 95, 94, 0.25);
     margin-top: 135px;
     margin-right: 30px;
-    position: relative; /* Hmm hmmm*/
+    position: relative;
 }
 
-#pv_projectimage {
+#img_pv_info {
     margin: 0;
     padding: 0;
     border-radius: 15px;
+    z-index: 1;
 }
 
-#pv-image-fig {
+.fig-image_small_overlay {
     margin: 0;
     padding: 0;
 }
 
-#pv-projectimage {
-    z-index: 1;
-}
-
-#pv-image-fig figcaption {
+.fig-image_small_overlay figcaption {
     position: absolute;
     min-width: 388px;
     max-width: 388px;
@@ -349,30 +307,18 @@ section {
     border-radius: 15px;
 }
 
-#pv-image-fig figcaption:hover {
+.a-img_link {
+    color: inherit;
+    text-decoration: inherit;
+}
+
+.fig-image_small_overlay figcaption:hover {
     background-color: rgba(255,255,255,0.75);
     color: black;
     transition: 0.75s;
 }
 
-
-#pv-title h1 {
-    margin-top: 5px;
-    margin-bottom: 2px;
-    color: black;
-    font-weight: 400;
-    font-size: 24px;
-}
-
-#pv-title h2 {
-    margin: 0;
-    margin-bottom: 15px;
-    color: black;
-    font-weight: 200;
-    font-size: 20px;
-}
-
-#pv-intro {
+#infocard_description {
     font-size: 16px;
     letter-spacing: 0.05em;
     word-spacing: 0.01;
@@ -468,15 +414,114 @@ td {
 ##########################
 */
 
-.teamcalendar {
+#sec_teamcalendar {
     display: none; /*!!!HERE IT IS!!!!*/
 }
 
-.two-column-spacearound {
+#tc-calendarcard {
+    max-width: 1000px;
+    min-width: 1000px;
+    margin-right: 15px;
+    margin-top: 216px;
+    min-height: 480px;
+    max-height: 480px;
+    overflow-y: scroll;
+}
+
+
+.tc-calendar-holder {
+    display: flex;
+    flex-flow: column wrap;
+}
+
+.calendar-table {
+    min-width: 950px;
+    margin: 0;
+}
+
+.filtercard-timerange {
     display: flex;
     justify-content: space-around;
-    text-align: center;
+    /*margin-top: 10px;
+    margin-bottom: 5px;*/
+    align-items: center;
+    padding: 5, 10;
+    border: 1 px solid black;
 }
-.two-column-spacearound h1{
+
+.timerange-box {
+    display: flex;
+    flex-flow: column wrap;
+   /* justify-content: space-evenly;*/    
+   text-align: center;
+}
+
+.timerange-box label {
+    font-size: 14px;
+    color: rgba(62, 63, 64, 1);
+    letter-spacing: 0.05em;
+    word-spacing: 0.1em;
+    line-height: 2em;
+    font-weight: 700;
+    padding: 5px 0;
+}
+
+.filtercard-timerange h1 {
     font-size: 18px;
+    color: rgba(62, 63, 64, 1);
+    letter-spacing: 0.05em;
+    word-spacing: 0.1em;
+    line-height: 2em;
+    font-weight: 700;
+    padding: 5px 0;
+}
+
+.timerange-box input {
+    max-width: 150px;
+    letter-spacing: 0.1em;
+    word-spacing: 0.1em;
+    font-weight: 700;
+    font-size: 14px;
+    padding: 10px 10px;
+    background-color: rgba(97, 95, 94, 0);
+    color: rgba(19, 37, 54, 1);
+    border: 1px solid rgba(97, 95, 94, 0);
+    border-radius: 15px;
+    overflow: auto ;
+}
+
+.timerange-box input:hover {
+    /*background-color: rgba(78, 110, 97, 0.8);*/
+    background-color: rgba(94,94,94,0.65);
+    transition: 0.75s;
+}   
+
+/* 
+##########################
+#####   TEAM STATS   #####
+##########################
+*/
+
+#sec_teamstats {
+    display: none;
+}
+
+/* 
+##########################
+#####   FRUIT BOARD  #####
+##########################
+*/
+
+#sec_fruitboard {
+    display: none;
+}
+
+/* 
+##########################
+#####   VEG BOARD    #####
+##########################
+*/
+
+#sec_vegboard {
+    display: none;
 }
