--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -320,7 +320,7 @@ header span {
 */
 
 #sec_welcomepage {
-    display: block;
+    display: none;
 }
 
 /* 
@@ -457,7 +457,7 @@ header span {
 ##########################
 */
 
-#sec_teamstats {
+#sec_teamoverview {
     display: none;
 }
 
